@@ -58,3 +58,4 @@ export(targetplot)
 export(bmdplotwithgradient)
 export(ecdfquantileplot)
 export(trendplot)
+export(sensitivityplot)
